zebra-rpc/src/methods/tests/snapshots/getrawtransaction_verbosity=1@mainnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
expression: rsp
---
{
  "Ok": {
    "in_active_chain": true,
    "hex": "01000000010000000000000000000000000000000000000000000000000000000000000000ffffffff025100ffffffff0250c30000000000002321027a46eb513588b01b37ea24303f4b628afd12cc20df789fede0921e43cad3e875acd43000000000000017a9147d46a730d31f97b1930d3368a967c309bd4d136a8700000000",
    "height": 1,
    "confirmations": 10,
    "vin": [
      {
        "coinbase": "5100",
        "sequence": 4294967295
      }
    ],
    "vout": [
      {
        "value": 0.0005,
        "valueZat": 50000,
        "n": 0,
        "scriptPubKey": {
          "asm": "027a46eb513588b01b37ea24303f4b628afd12cc20df789fede0921e43cad3e875 OP_CHECKSIG",
          "hex": "21027a46eb513588b01b37ea24303f4b628afd12cc20df789fede0921e43cad3e875ac",
          "type": "pubkey"
        }
      },
      {
        "value": 0.000125,
        "valueZat": 12500,
        "n": 1,
        "scriptPubKey": {
          "asm": "OP_HASH160 7d46a730d31f97b1930d3368a967c309bd4d136a OP_EQUAL",
          "hex": "a9147d46a730d31f97b1930d3368a967c309bd4d136a87",
          "reqSigs": 1,
          "type": "scripthash",
          "addresses": [
            "t3Vz22vK5z2LcKEdg16Yv4FFneEL1zg9ojd"
          ]
        }
      }
    ],
    "vShieldedSpend": [],
    "vShieldedOutput": [],
    "vjoinsplit": [],
    "orchard": {
      "actions": [],
      "valueBalance": 0.0,
      "valueBalanceZat": 0
    },
    "ironwood": {
      "actions": [],
      "valueBalance": 0.0,
      "valueBalanceZat": 0
    },
    "valueBalance": 0.0,
    "valueBalanceZat": 0,
    "size": 129,
    "time": 1477671596,
    "txid": "851bf6fbf7a976327817c738c489d7fa657752445430922d94c983c0b9ed4609",
    "overwintered": false,
    "version": 1,
    "locktime": 0,
    "blockhash": "0007bc227e1c57a4a70e237cad00e7b7ce565155ab49166bc57397a26d339283",
    "blocktime": 1477671596
  }
}
