zebra-rpc/src/methods/tests/snapshots/getrawtransaction_verbosity=1@testnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
expression: rsp
---
{
  "Ok": {
    "in_active_chain": true,
    "hex": "01000000010000000000000000000000000000000000000000000000000000000000000000ffffffff03510101ffffffff0250c30000000000002321025229e1240a21004cf8338db05679fa34753706e84f6aebba086ba04317fd8f99acd43000000000000017a914ef775f1f997f122a062fff1a2d7443abd1f9c6428700000000",
    "height": 1,
    "confirmations": 10,
    "vin": [
      {
        "coinbase": "510101",
        "sequence": 4294967295
      }
    ],
    "vout": [
      {
        "value": 0.0005,
        "valueZat": 50000,
        "n": 0,
        "scriptPubKey": {
          "asm": "025229e1240a21004cf8338db05679fa34753706e84f6aebba086ba04317fd8f99 OP_CHECKSIG",
          "hex": "21025229e1240a21004cf8338db05679fa34753706e84f6aebba086ba04317fd8f99ac",
          "type": "pubkey"
        }
      },
      {
        "value": 0.000125,
        "valueZat": 12500,
        "n": 1,
        "scriptPubKey": {
          "asm": "OP_HASH160 ef775f1f997f122a062fff1a2d7443abd1f9c642 OP_EQUAL",
          "hex": "a914ef775f1f997f122a062fff1a2d7443abd1f9c64287",
          "reqSigs": 1,
          "type": "scripthash",
          "addresses": [
            "t2UNzUUx8mWBCRYPRezvA363EYXyEpHokyi"
          ]
        }
      }
    ],
    "vShieldedSpend": [],
    "vShieldedOutput": [],
    "vjoinsplit": [],
    "orchard": {
      "actions": [],
      "valueBalance": 0.0,
      "valueBalanceZat": 0
    },
    "ironwood": {
      "actions": [],
      "valueBalance": 0.0,
      "valueBalanceZat": 0
    },
    "valueBalance": 0.0,
    "valueBalanceZat": 0,
    "size": 130,
    "time": 1477674473,
    "txid": "f37e9f691fffb635de0999491d906ee85ba40cd36dae9f6e5911a8277d7c5f75",
    "overwintered": false,
    "version": 1,
    "locktime": 0,
    "blockhash": "025579869bcf52a989337342f5f57a84f3a28b968f7d6a8307902b065a668d23",
    "blocktime": 1477674473
  }
}
